# PyTorch-Beacon

./: .gitignore  LICENCE  README.md  beacon.py  dataloading.py  engine.py  pyproject.toml  setup.py
PyTorch_Beacon.egg-info/: PKG-INFO  SOURCES.txt
PyTorch_Beacon_Test.egg-info/: PKG-INFO  SOURCES.txt
beacon/: __init__.py  dataloading.py  metrics.py  models.py  module.py  training.py  utils.py
