[build-system]
requires = ["setuptools", "wheel", "pathlib", "torch", "torchvision", "ipywidgets", "tqdm"]

build-backend = "setuptools.build_meta"

[project]
name = "PyTorch-Beacon"
version = "0.1.0"
authors = [
  { name="Luke Ye", email="lukelele2001@gmail.com" },
]
description = "A lightweight helper library for PyTorch"
readme = "README.md"
requires-python = ">=3.6"
classifiers = []

[project.urls]
"Homepage" = "https://github.com/Lukelele/PyTorch-Beacon"